# serializer version: 1
# name: test_brine_density
  '''
  [1.00507007e+03 1.00488039e+03 1.00468987e+03 1.00449852e+03
   1.00430635e+03 1.00411335e+03 1.00391953e+03 1.00372488e+03
   1.00352942e+03 1.00333313e+03 1.00313603e+03 1.00293811e+03
   1.00273938e+03 1.00253984e+03 1.00233948e+03 1.00213832e+03
   1.00193635e+03 1.00173357e+03 1.00152999e+03 1.00132561e+03
   1.00112042e+03 1.00091444e+03 1.00070766e+03 1.00050008e+03
   1.00029171e+03 1.00008254e+03 9.99872590e+02 9.99661846e+02
   9.99450314e+02 9.99237997e+02 9.99024894e+02 9.98811009e+02
   9.98596343e+02 9.98380897e+02 9.98164673e+02 9.97947672e+02
   9.97729897e+02 9.97511349e+02 9.97292029e+02 9.97071940e+02
   9.96851081e+02 9.96629457e+02 9.96407067e+02 9.96183913e+02
   9.95959998e+02 9.95735323e+02 9.95509888e+02 9.95283697e+02
   9.95056750e+02 9.94829049e+02 9.94600595e+02 9.94371391e+02
   9.94141438e+02 9.93910737e+02 9.93679290e+02 9.93447099e+02
   9.93214165e+02 9.92980489e+02 9.92746074e+02 9.92510921e+02
   9.92275031e+02 9.92038406e+02 9.91801047e+02 9.91562957e+02
   9.91324136e+02 9.91084587e+02 9.90844311e+02 9.90603308e+02
   9.90361582e+02 9.90119133e+02 9.89875963e+02 9.89632074e+02
   9.89387467e+02 9.89142143e+02 9.88896105e+02 9.88649354e+02
   9.88401890e+02 9.88153717e+02 9.87904835e+02 9.87655246e+02
   9.87404951e+02 9.87153952e+02 9.86902251e+02 9.86649848e+02
   9.86396747e+02 9.86142947e+02 9.85888451e+02 9.85633260e+02
   9.85377375e+02 9.85120799e+02 9.84863533e+02 9.84605577e+02
   9.84346934e+02 9.84087606e+02 9.83827593e+02 9.83566897e+02
   9.83305520e+02 9.83043464e+02 9.82780729e+02 9.82517317e+02
   9.82253230e+02]
  '''
# ---
# name: test_brine_properties
  tuple(
    '''
      [1.62052418e+03 1.62064238e+03 1.62075573e+03 1.62086426e+03
       1.62096799e+03 1.62106696e+03 1.62116117e+03 1.62125066e+03
       1.62133546e+03 1.62141558e+03 1.62149105e+03 1.62156189e+03
       1.62162812e+03 1.62168977e+03 1.62174687e+03 1.62179943e+03
       1.62184747e+03 1.62189102e+03 1.62193011e+03 1.62196474e+03
       1.62199495e+03 1.62202075e+03 1.62204217e+03 1.62205923e+03
       1.62207195e+03 1.62208034e+03 1.62208443e+03 1.62208424e+03
       1.62207980e+03 1.62207111e+03 1.62205820e+03 1.62204108e+03
       1.62201979e+03 1.62199433e+03 1.62196473e+03 1.62193100e+03
       1.62189317e+03 1.62185125e+03 1.62180526e+03 1.62175521e+03
       1.62170113e+03 1.62164304e+03 1.62158094e+03 1.62151487e+03
       1.62144482e+03 1.62137084e+03 1.62129292e+03 1.62121108e+03
       1.62112535e+03 1.62103574e+03 1.62094227e+03 1.62084494e+03
       1.62074378e+03 1.62063881e+03 1.62053003e+03 1.62041747e+03
       1.62030113e+03 1.62018104e+03 1.62005721e+03 1.61992966e+03
       1.61979839e+03 1.61966343e+03 1.61952478e+03 1.61938246e+03
       1.61923649e+03 1.61908688e+03 1.61893365e+03 1.61877680e+03
       1.61861635e+03 1.61845231e+03 1.61828471e+03 1.61811354e+03
       1.61793883e+03 1.61776058e+03 1.61757881e+03 1.61739353e+03
       1.61720476e+03 1.61701251e+03 1.61681678e+03 1.61661759e+03
       1.61641495e+03 1.61620888e+03 1.61599939e+03 1.61578648e+03
       1.61557017e+03 1.61535047e+03 1.61512740e+03 1.61490095e+03
       1.61467115e+03 1.61443800e+03 1.61420152e+03 1.61396172e+03
       1.61371860e+03 1.61347218e+03 1.61322247e+03 1.61296947e+03
       1.61271320e+03 1.61245367e+03 1.61219089e+03 1.61192486e+03
       1.61165560e+03]
    ''',
    '''
      [1.00507007e+03 1.00488039e+03 1.00468987e+03 1.00449852e+03
       1.00430635e+03 1.00411335e+03 1.00391953e+03 1.00372488e+03
       1.00352942e+03 1.00333313e+03 1.00313603e+03 1.00293811e+03
       1.00273938e+03 1.00253984e+03 1.00233948e+03 1.00213832e+03
       1.00193635e+03 1.00173357e+03 1.00152999e+03 1.00132561e+03
       1.00112042e+03 1.00091444e+03 1.00070766e+03 1.00050008e+03
       1.00029171e+03 1.00008254e+03 9.99872590e+02 9.99661846e+02
       9.99450314e+02 9.99237997e+02 9.99024894e+02 9.98811009e+02
       9.98596343e+02 9.98380897e+02 9.98164673e+02 9.97947672e+02
       9.97729897e+02 9.97511349e+02 9.97292029e+02 9.97071940e+02
       9.96851081e+02 9.96629457e+02 9.96407067e+02 9.96183913e+02
       9.95959998e+02 9.95735323e+02 9.95509888e+02 9.95283697e+02
       9.95056750e+02 9.94829049e+02 9.94600595e+02 9.94371391e+02
       9.94141438e+02 9.93910737e+02 9.93679290e+02 9.93447099e+02
       9.93214165e+02 9.92980489e+02 9.92746074e+02 9.92510921e+02
       9.92275031e+02 9.92038406e+02 9.91801047e+02 9.91562957e+02
       9.91324136e+02 9.91084587e+02 9.90844311e+02 9.90603308e+02
       9.90361582e+02 9.90119133e+02 9.89875963e+02 9.89632074e+02
       9.89387467e+02 9.89142143e+02 9.88896105e+02 9.88649354e+02
       9.88401890e+02 9.88153717e+02 9.87904835e+02 9.87655246e+02
       9.87404951e+02 9.87153952e+02 9.86902251e+02 9.86649848e+02
       9.86396747e+02 9.86142947e+02 9.85888451e+02 9.85633260e+02
       9.85377375e+02 9.85120799e+02 9.84863533e+02 9.84605577e+02
       9.84346934e+02 9.84087606e+02 9.83827593e+02 9.83566897e+02
       9.83305520e+02 9.83043464e+02 9.82780729e+02 9.82517317e+02
       9.82253230e+02]
    ''',
    '''
      [2.63941314e+09 2.63929997e+09 2.63916872e+09 2.63901948e+09
       2.63885234e+09 2.63866738e+09 2.63846471e+09 2.63824440e+09
       2.63800655e+09 2.63775124e+09 2.63747857e+09 2.63718861e+09
       2.63688145e+09 2.63655718e+09 2.63621589e+09 2.63585765e+09
       2.63548256e+09 2.63509070e+09 2.63468214e+09 2.63425698e+09
       2.63381530e+09 2.63335716e+09 2.63288267e+09 2.63239189e+09
       2.63188491e+09 2.63136181e+09 2.63082267e+09 2.63026756e+09
       2.62969656e+09 2.62910976e+09 2.62850722e+09 2.62788902e+09
       2.62725525e+09 2.62660597e+09 2.62594127e+09 2.62526121e+09
       2.62456587e+09 2.62385532e+09 2.62312964e+09 2.62238890e+09
       2.62163317e+09 2.62086253e+09 2.62007704e+09 2.61927678e+09
       2.61846182e+09 2.61763222e+09 2.61678806e+09 2.61592940e+09
       2.61505631e+09 2.61416887e+09 2.61326714e+09 2.61235119e+09
       2.61142108e+09 2.61047688e+09 2.60951865e+09 2.60854647e+09
       2.60756040e+09 2.60656050e+09 2.60554683e+09 2.60451946e+09
       2.60347846e+09 2.60242388e+09 2.60135580e+09 2.60027426e+09
       2.59917934e+09 2.59807109e+09 2.59694958e+09 2.59581487e+09
       2.59466701e+09 2.59350607e+09 2.59233211e+09 2.59114518e+09
       2.58994534e+09 2.58873266e+09 2.58750719e+09 2.58626899e+09
       2.58501811e+09 2.58375462e+09 2.58247856e+09 2.58119000e+09
       2.57988899e+09 2.57857559e+09 2.57724985e+09 2.57591183e+09
       2.57456157e+09 2.57319915e+09 2.57182460e+09 2.57043799e+09
       2.56903936e+09 2.56762877e+09 2.56620628e+09 2.56477192e+09
       2.56332577e+09 2.56186786e+09 2.56039825e+09 2.55891699e+09
       2.55742413e+09 2.55591972e+09 2.55440382e+09 2.55287647e+09
       2.55133771e+09]
    ''',
  )
# ---
# name: test_brine_velocity
  '''
  [1.62052418e+03 1.62064238e+03 1.62075573e+03 1.62086426e+03
   1.62096799e+03 1.62106696e+03 1.62116117e+03 1.62125066e+03
   1.62133546e+03 1.62141558e+03 1.62149105e+03 1.62156189e+03
   1.62162812e+03 1.62168977e+03 1.62174687e+03 1.62179943e+03
   1.62184747e+03 1.62189102e+03 1.62193011e+03 1.62196474e+03
   1.62199495e+03 1.62202075e+03 1.62204217e+03 1.62205923e+03
   1.62207195e+03 1.62208034e+03 1.62208443e+03 1.62208424e+03
   1.62207980e+03 1.62207111e+03 1.62205820e+03 1.62204108e+03
   1.62201979e+03 1.62199433e+03 1.62196473e+03 1.62193100e+03
   1.62189317e+03 1.62185125e+03 1.62180526e+03 1.62175521e+03
   1.62170113e+03 1.62164304e+03 1.62158094e+03 1.62151487e+03
   1.62144482e+03 1.62137084e+03 1.62129292e+03 1.62121108e+03
   1.62112535e+03 1.62103574e+03 1.62094227e+03 1.62084494e+03
   1.62074378e+03 1.62063881e+03 1.62053003e+03 1.62041747e+03
   1.62030113e+03 1.62018104e+03 1.62005721e+03 1.61992966e+03
   1.61979839e+03 1.61966343e+03 1.61952478e+03 1.61938246e+03
   1.61923649e+03 1.61908688e+03 1.61893365e+03 1.61877680e+03
   1.61861635e+03 1.61845231e+03 1.61828471e+03 1.61811354e+03
   1.61793883e+03 1.61776058e+03 1.61757881e+03 1.61739353e+03
   1.61720476e+03 1.61701251e+03 1.61681678e+03 1.61661759e+03
   1.61641495e+03 1.61620888e+03 1.61599939e+03 1.61578648e+03
   1.61557017e+03 1.61535047e+03 1.61512740e+03 1.61490095e+03
   1.61467115e+03 1.61443800e+03 1.61420152e+03 1.61396172e+03
   1.61371860e+03 1.61347218e+03 1.61322247e+03 1.61296947e+03
   1.61271320e+03 1.61245367e+03 1.61219089e+03 1.61192486e+03
   1.61165560e+03]
  '''
# ---
# name: test_water_density
  '''
  [9.81024380e+02 9.80833623e+02 9.80642030e+02 9.80449605e+02
   9.80256348e+02 9.80062261e+02 9.79867346e+02 9.79671604e+02
   9.79475037e+02 9.79277647e+02 9.79079435e+02 9.78880403e+02
   9.78680553e+02 9.78479886e+02 9.78278404e+02 9.78076108e+02
   9.77873001e+02 9.77669084e+02 9.77464358e+02 9.77258826e+02
   9.77052488e+02 9.76845347e+02 9.76637404e+02 9.76428661e+02
   9.76219119e+02 9.76008781e+02 9.75797647e+02 9.75585719e+02
   9.75372999e+02 9.75159489e+02 9.74945190e+02 9.74730104e+02
   9.74514232e+02 9.74297576e+02 9.74080138e+02 9.73861919e+02
   9.73642921e+02 9.73423146e+02 9.73202594e+02 9.72981269e+02
   9.72759170e+02 9.72536301e+02 9.72312662e+02 9.72088256e+02
   9.71863083e+02 9.71637145e+02 9.71410445e+02 9.71182982e+02
   9.70954760e+02 9.70725780e+02 9.70496043e+02 9.70265551e+02
   9.70034305e+02 9.69802308e+02 9.69569559e+02 9.69336063e+02
   9.69101819e+02 9.68866829e+02 9.68631095e+02 9.68394619e+02
   9.68157402e+02 9.67919445e+02 9.67680751e+02 9.67441320e+02
   9.67201155e+02 9.66960257e+02 9.66718627e+02 9.66476267e+02
   9.66233179e+02 9.65989363e+02 9.65744823e+02 9.65499559e+02
   9.65253572e+02 9.65006865e+02 9.64759438e+02 9.64511294e+02
   9.64262434e+02 9.64012860e+02 9.63762572e+02 9.63511573e+02
   9.63259864e+02 9.63007447e+02 9.62754322e+02 9.62500493e+02
   9.62245959e+02 9.61990724e+02 9.61734787e+02 9.61478152e+02
   9.61220818e+02 9.60962789e+02 9.60704064e+02 9.60444647e+02
   9.60184538e+02 9.59923739e+02 9.59662251e+02 9.59400075e+02
   9.59137215e+02 9.58873670e+02 9.58609442e+02 9.58344533e+02
   9.58078945e+02]
  '''
# ---
# name: test_water_properties
  tuple(
    '''
      [1.59144368e+03 1.59159698e+03 1.59174507e+03 1.59188797e+03
       1.59202570e+03 1.59215830e+03 1.59228579e+03 1.59240819e+03
       1.59252553e+03 1.59263784e+03 1.59274514e+03 1.59284745e+03
       1.59294479e+03 1.59303720e+03 1.59312470e+03 1.59320731e+03
       1.59328505e+03 1.59335795e+03 1.59342602e+03 1.59348930e+03
       1.59354781e+03 1.59360157e+03 1.59365059e+03 1.59369491e+03
       1.59373454e+03 1.59376951e+03 1.59379984e+03 1.59382555e+03
       1.59384665e+03 1.59386318e+03 1.59387516e+03 1.59388259e+03
       1.59388551e+03 1.59388393e+03 1.59387788e+03 1.59386737e+03
       1.59385242e+03 1.59383306e+03 1.59380930e+03 1.59378116e+03
       1.59374866e+03 1.59371182e+03 1.59367066e+03 1.59362519e+03
       1.59357544e+03 1.59352143e+03 1.59346316e+03 1.59340067e+03
       1.59333396e+03 1.59326305e+03 1.59318797e+03 1.59310873e+03
       1.59302534e+03 1.59293782e+03 1.59284619e+03 1.59275047e+03
       1.59265067e+03 1.59254681e+03 1.59243891e+03 1.59232697e+03
       1.59221103e+03 1.59209108e+03 1.59196715e+03 1.59183926e+03
       1.59170741e+03 1.59157163e+03 1.59143192e+03 1.59128831e+03
       1.59114080e+03 1.59098942e+03 1.59083417e+03 1.59067508e+03
       1.59051215e+03 1.59034539e+03 1.59017483e+03 1.59000048e+03
       1.58982235e+03 1.58964045e+03 1.58945480e+03 1.58926540e+03
       1.58907228e+03 1.58887545e+03 1.58867492e+03 1.58847069e+03
       1.58826280e+03 1.58805123e+03 1.58783602e+03 1.58761717e+03
       1.58739469e+03 1.58716860e+03 1.58693890e+03 1.58670562e+03
       1.58646875e+03 1.58622832e+03 1.58598433e+03 1.58573680e+03
       1.58548573e+03 1.58523114e+03 1.58497304e+03 1.58471144e+03
       1.58444635e+03]
    ''',
    '''
      [9.81024380e+02 9.80833623e+02 9.80642030e+02 9.80449605e+02
       9.80256348e+02 9.80062261e+02 9.79867346e+02 9.79671604e+02
       9.79475037e+02 9.79277647e+02 9.79079435e+02 9.78880403e+02
       9.78680553e+02 9.78479886e+02 9.78278404e+02 9.78076108e+02
       9.77873001e+02 9.77669084e+02 9.77464358e+02 9.77258826e+02
       9.77052488e+02 9.76845347e+02 9.76637404e+02 9.76428661e+02
       9.76219119e+02 9.76008781e+02 9.75797647e+02 9.75585719e+02
       9.75372999e+02 9.75159489e+02 9.74945190e+02 9.74730104e+02
       9.74514232e+02 9.74297576e+02 9.74080138e+02 9.73861919e+02
       9.73642921e+02 9.73423146e+02 9.73202594e+02 9.72981269e+02
       9.72759170e+02 9.72536301e+02 9.72312662e+02 9.72088256e+02
       9.71863083e+02 9.71637145e+02 9.71410445e+02 9.71182982e+02
       9.70954760e+02 9.70725780e+02 9.70496043e+02 9.70265551e+02
       9.70034305e+02 9.69802308e+02 9.69569559e+02 9.69336063e+02
       9.69101819e+02 9.68866829e+02 9.68631095e+02 9.68394619e+02
       9.68157402e+02 9.67919445e+02 9.67680751e+02 9.67441320e+02
       9.67201155e+02 9.66960257e+02 9.66718627e+02 9.66476267e+02
       9.66233179e+02 9.65989363e+02 9.65744823e+02 9.65499559e+02
       9.65253572e+02 9.65006865e+02 9.64759438e+02 9.64511294e+02
       9.64262434e+02 9.64012860e+02 9.63762572e+02 9.63511573e+02
       9.63259864e+02 9.63007447e+02 9.62754322e+02 9.62500493e+02
       9.62245959e+02 9.61990724e+02 9.61734787e+02 9.61478152e+02
       9.61220818e+02 9.60962789e+02 9.60704064e+02 9.60444647e+02
       9.60184538e+02 9.59923739e+02 9.59662251e+02 9.59400075e+02
       9.59137215e+02 9.58873670e+02 9.58609442e+02 9.58344533e+02
       9.58078945e+02]
    ''',
    '''
      [2.48463358e+09 2.48462906e+09 2.48460600e+09 2.48456450e+09
       2.48450465e+09 2.48442653e+09 2.48433023e+09 2.48421584e+09
       2.48408344e+09 2.48393314e+09 2.48376500e+09 2.48357912e+09
       2.48337559e+09 2.48315449e+09 2.48291589e+09 2.48265990e+09
       2.48238659e+09 2.48209605e+09 2.48178835e+09 2.48146359e+09
       2.48112184e+09 2.48076318e+09 2.48038770e+09 2.47999548e+09
       2.47958660e+09 2.47916113e+09 2.47871916e+09 2.47826077e+09
       2.47778603e+09 2.47729502e+09 2.47678782e+09 2.47626451e+09
       2.47572516e+09 2.47516985e+09 2.47459866e+09 2.47401166e+09
       2.47340892e+09 2.47279053e+09 2.47215655e+09 2.47150706e+09
       2.47084213e+09 2.47016184e+09 2.46946625e+09 2.46875544e+09
       2.46802948e+09 2.46728845e+09 2.46653240e+09 2.46576142e+09
       2.46497557e+09 2.46417493e+09 2.46335955e+09 2.46252951e+09
       2.46168489e+09 2.46082574e+09 2.45995213e+09 2.45906413e+09
       2.45816181e+09 2.45724524e+09 2.45631448e+09 2.45536959e+09
       2.45441064e+09 2.45343769e+09 2.45245082e+09 2.45145008e+09
       2.45043554e+09 2.44940726e+09 2.44836530e+09 2.44730973e+09
       2.44624061e+09 2.44515800e+09 2.44406196e+09 2.44295255e+09
       2.44182984e+09 2.44069389e+09 2.43954475e+09 2.43838248e+09
       2.43720715e+09 2.43601881e+09 2.43481752e+09 2.43360335e+09
       2.43237635e+09 2.43113657e+09 2.42988407e+09 2.42861892e+09
       2.42734117e+09 2.42605087e+09 2.42474809e+09 2.42343287e+09
       2.42210527e+09 2.42076536e+09 2.41941318e+09 2.41804878e+09
       2.41667224e+09 2.41528359e+09 2.41388289e+09 2.41247019e+09
       2.41104556e+09 2.40960904e+09 2.40816068e+09 2.40670054e+09
       2.40522868e+09]
    ''',
  )
# ---
# name: test_water_velocity
  '''
  [1.59144368e+03 1.59159698e+03 1.59174507e+03 1.59188797e+03
   1.59202570e+03 1.59215830e+03 1.59228579e+03 1.59240819e+03
   1.59252553e+03 1.59263784e+03 1.59274514e+03 1.59284745e+03
   1.59294479e+03 1.59303720e+03 1.59312470e+03 1.59320731e+03
   1.59328505e+03 1.59335795e+03 1.59342602e+03 1.59348930e+03
   1.59354781e+03 1.59360157e+03 1.59365059e+03 1.59369491e+03
   1.59373454e+03 1.59376951e+03 1.59379984e+03 1.59382555e+03
   1.59384665e+03 1.59386318e+03 1.59387516e+03 1.59388259e+03
   1.59388551e+03 1.59388393e+03 1.59387788e+03 1.59386737e+03
   1.59385242e+03 1.59383306e+03 1.59380930e+03 1.59378116e+03
   1.59374866e+03 1.59371182e+03 1.59367066e+03 1.59362519e+03
   1.59357544e+03 1.59352143e+03 1.59346316e+03 1.59340067e+03
   1.59333396e+03 1.59326305e+03 1.59318797e+03 1.59310873e+03
   1.59302534e+03 1.59293782e+03 1.59284619e+03 1.59275047e+03
   1.59265067e+03 1.59254681e+03 1.59243891e+03 1.59232697e+03
   1.59221103e+03 1.59209108e+03 1.59196715e+03 1.59183926e+03
   1.59170741e+03 1.59157163e+03 1.59143192e+03 1.59128831e+03
   1.59114080e+03 1.59098942e+03 1.59083417e+03 1.59067508e+03
   1.59051215e+03 1.59034539e+03 1.59017483e+03 1.59000048e+03
   1.58982235e+03 1.58964045e+03 1.58945480e+03 1.58926540e+03
   1.58907228e+03 1.58887545e+03 1.58867492e+03 1.58847069e+03
   1.58826280e+03 1.58805123e+03 1.58783602e+03 1.58761717e+03
   1.58739469e+03 1.58716860e+03 1.58693890e+03 1.58670562e+03
   1.58646875e+03 1.58622832e+03 1.58598433e+03 1.58573680e+03
   1.58548573e+03 1.58523114e+03 1.58497304e+03 1.58471144e+03
   1.58444635e+03]
  '''
# ---
